--- a/stagFour/package.json
+++ b/stagFour/package.json
@@ -12,6 +12,10 @@
     "react": "16.0.0-alpha.12",
     "react-native": "0.48.3",
     "react-native-base": "^1.1.0",
+    "react-native-datepicker": "^1.6.0",
+    "react-native-hr": "^1.1.3",
+    "react-native-icon": "^0.2.10",
+    "react-native-tabs": "^1.0.9",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
